css/main.css
@charset 'utf-8';
@font-face
{
	font-family: 'allerbold_italic';
	src: url('../fonts/aller_bdit-webfont.eot');
	src: url('../fonts/aller_bdit-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/aller_bdit-webfont.woff') format('woff'), url('../fonts/aller_bdit-webfont.ttf') format('truetype'), url('../fonts/aller_bdit-webfont.svg#allerbold_italic') format('svg');
	font-weight: normal;
	font-style: normal;
}

@font-face
{
	font-family: 'allerregular';
	src: url('../fonts/aller_rg-webfont.eot');
	src: url('../fonts/aller_rg-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/aller_rg-webfont.woff') format('woff'), url('../fonts/aller_rg-webfont.ttf') format('truetype'), url('../fonts/aller_rg-webfont.svg#allerregular') format('svg');
	font-weight: normal;
	font-style: normal;
}

html, body
{
	height: auto; 
	min-height: 100%;
	margin: 0px;
	padding: 0px;
	font-family: Arial;
	position: relative;
	font-family: 'allerregular';
	font-size: 15px;
}

img
{
	border: none;
	margin: 0;
	padding: 0;
}

a
{
	outline: none;
	cursor: pointer;
	color: #000;
	text-decoration: none;
}

.blue
{
	color: #979FA7;
}

.right
{
	float: right;
	text-align: right;
}

#gallery
{
	height: 494px;
	position: relative;
	overflow: hidden;
}

#gallery img
{
	display: none;
	margin: 0px 15px 0px 0px;
}

#rail
{
	position: absolute;
}

#caption
{
	text-align: right;
}

#header, #thumbnails, #caption, #content, #footer
{
	width: 788px;
	margin: auto;
	z-index: 2;
	position: relative;
	margin-top: 25px;
}

#content .left
{
	width: 470px;
	display: inline-block;
}

#content .right
{
	font-family: 'allerbold_italic';
}

#content .right a
{
	display: block;
	font-size: 20px;
}


#content .right h2
{
	margin-top: 0px;
	margin-bottom: 5px;
	font-size: 46px;
	line-height: 44px;
}

#header
{
	height: 110px;
	margin-top: 10px;
	margin-bottom: 10px;
}

#header img
{
	float: left;
}

#header .right
{
	margin-top: 85px;
}

#background
{
	position: absolute;
	top: 0px;
	height: 100%; 
	width: 100%;
	z-index: 0;
}

#background .image
{
	background: url('../images/me.jpg') -280px -180px no-repeat;
	height: 100%;
	margin: auto;
	z-index: 0;
}

#footer
{
	height: 40px;
}

